--- a/src/vista/Facturacion.form
+++ b/src/vista/Facturacion.form
@@ -307,12 +307,12 @@
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="txtIdEmpleado" min="-2" pref="181" max="-2" attributes="0"/>
-                      <Component id="txtIdCliente" alignment="0" min="-2" pref="181" max="-2" attributes="0"/>
-                      <Group type="102" attributes="0">
-                          <Component id="txtIdFactura" min="-2" pref="181" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
+                      <Group type="102" alignment="0" attributes="0">
+                          <Component id="txtIdCliente" min="-2" pref="181" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
                           <Component id="boxTipoVenta" min="-2" pref="152" max="-2" attributes="0"/>
                       </Group>
+                      <Component id="txtIdFactura" min="-2" pref="181" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
@@ -325,7 +325,6 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="txtIdFactura" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="boxTipoVenta" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -336,6 +335,7 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel8" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="txtIdCliente" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="boxTipoVenta" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
