--- a/src/vista/Facturacion.form
+++ b/src/vista/Facturacion.form
@@ -468,7 +468,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="cajaCantidadProdFact" max="32767" attributes="0"/>
+                      <Component id="txtCantidadIncremento" max="32767" attributes="0"/>
                       <Component id="btnBorrarProducto" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -485,7 +485,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="cajaCantidadProdFact" alignment="1" min="-2" pref="44" max="-2" attributes="0"/>
+                      <Component id="txtCantidadIncremento" alignment="1" min="-2" pref="44" max="-2" attributes="0"/>
                       <Component id="btnAumentarCantidad" alignment="1" min="-2" pref="44" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -519,7 +519,7 @@
             </Property>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="cajaCantidadProdFact">
+        <Component class="javax.swing.JTextField" name="txtCantidadIncremento">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -538,6 +538,9 @@
               <Image iconType="3" name="/Imagenes/uparrow_arriba_1538.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAumentarCantidadActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
