--- a/src/vista/PanelFactura.form
+++ b/src/vista/PanelFactura.form
@@ -432,10 +432,10 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JTable" name="jTable1">
+            <Component class="javax.swing.JTable" name="jTableDetalle">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="3" rowCount="4">
+                  <Table columnCount="3" rowCount="0">
                     <Column editable="false" title="Producto" type="java.lang.Integer"/>
                     <Column editable="false" title="Cantidad" type="java.lang.Integer"/>
                     <Column editable="false" title="Precio" type="java.lang.Float"/>
