--- a/src/vista/PanelFactura.form
+++ b/src/vista/PanelFactura.form
@@ -469,6 +469,7 @@
         </Container>
         <Component class="javax.swing.JTextField" name="jTextField1">
           <Properties>
+            <Property name="editable" type="boolean" value="false"/>
             <Property name="horizontalAlignment" type="int" value="0"/>
             <Property name="text" type="java.lang.String" value="Detalle"/>
           </Properties>
